--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,28 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.4.0
+  rev: v4.5.0
   hooks:
   - id: check-toml
   - id: check-yaml
   - id: end-of-file-fixer
   - id: trailing-whitespace
   - id: detect-private-key
-- repo: https://github.com/kynan/nbstripout
-  rev: 0.6.1
+  - id: pretty-format-json
+    args: [--autofix]
+- repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+  rev: v2.12.0
   hooks:
-    - id: nbstripout
-- repo: https://github.com/psf/black
-  rev: 23.3.0
+  - id: pretty-format-toml
+    args: [--autofix]
+  - id: pretty-format-yaml
+    args: [--autofix]
+- repo: https://github.com/charliermarsh/ruff-pre-commit
+  rev: v0.3.0
   hooks:
-    - id: black
-      language_version: python3.10
+    # Run the linter.
+  - id: ruff
+    types_or: [python, pyi, jupyter]
+    args: [--fix, --show-fixes]
+    # Run the formatter.
+  - id: ruff-format
+    types_or: [python, pyi, jupyter]
