--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,8 +7,6 @@ repos:
   - id: end-of-file-fixer
   - id: trailing-whitespace
   - id: detect-private-key
-  - id: pretty-format-json
-    args: [--autofix]
 - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
   rev: v2.12.0
   hooks:
@@ -21,8 +19,16 @@ repos:
   hooks:
     # Run the linter.
   - id: ruff
-    types_or: [python, pyi, jupyter]
+    types_or: [python, pyi]
     args: [--fix, --show-fixes]
     # Run the formatter.
   - id: ruff-format
     types_or: [python, pyi, jupyter]
+- repo: local
+  hooks:
+  - id: jupyter-nb-clear-output
+    name: jupyter-nb-clear-output
+    files: \.ipynb$
+    stages: [commit]
+    language: system
+    entry: jupyter nbconvert --ClearOutputPreprocessor.enabled=True --inplace
