--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.5.0
+  rev: v5.0.0
   hooks:
   - id: check-toml
   - id: check-yaml
@@ -8,14 +8,14 @@ repos:
   - id: trailing-whitespace
   - id: detect-private-key
 - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-  rev: v2.12.0
+  rev: v2.14.0
   hooks:
   - id: pretty-format-toml
     args: [--autofix]
   - id: pretty-format-yaml
     args: [--autofix]
 - repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: v0.3.0
+  rev: v0.11.12
   hooks:
     # Run the linter.
   - id: ruff
@@ -29,6 +29,6 @@ repos:
   - id: jupyter-nb-clear-output
     name: jupyter-nb-clear-output
     files: \.ipynb$
-    stages: [commit]
+    stages: [pre-commit]
     language: system
     entry: jupyter nbconvert --ClearOutputPreprocessor.enabled=True --inplace
